fix: style of graphs that were overflowing over the dashboard on the side

--- a/stagecraft/applistagecraft/static/applistagecraft/css/styles.css
+++ b/stagecraft/applistagecraft/static/applistagecraft/css/styles.css
@@ -79,6 +79,7 @@ h1 {
     display: flex;
     flex-direction: column;
     min-width: 15%;
+    z-index: 1 !important;
 }
  
 .toggle-icon {
@@ -94,10 +95,25 @@ h1 {
     box-shadow: none;
  }
 
- .sidebar-margin {
+.sidebar-margin {
     margin-left: 15% !important;
 }
 
-.topbar-margin {
-    margin-top: 5%;
+@media screen and (min-width: 1024px) and (max-width: 1600px) {
+    .topbar-margin {
+        margin-top: 5%;
+    }
+}
+
+@media screen and (min-width: 1601px) {
+    .topbar-margin {
+        margin-top: 3%;
+    }
+}
+
+.histogramme {
+    position: relative; 
+    height: 400px; 
+    width: 80%; margin: 0 auto; 
+    z-index:0 !important;
 }
